# dlisp

./: .devdockercfg  BUILD.bazel  README.md  WORKSPACE
builtins/: BUILD.bazel  arithmetic.go  builtins.go  list.go  logical.go  math.go  relational.go
devdocker/: Dockerfile
expression/: BUILD.bazel  debug_string.go  environment.go  eval.go  expression.go  parser.go  to_string.go  to_type.go  user_functions.go
interpreter/: BUILD.bazel  e2e_test.go  main.go  stdenv.go
parser/: parser.go
value/: value.go
