load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "stdenv.go",
    ],
    importpath = "github.com/priyendra/dlisp/interpreter",
    visibility = ["//visibility:private"],
    deps = [
        "//builtins:go_default_library",
        "//expression:go_default_library",
    ],
)

go_binary(
    name = "interpreter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["e2e_test.go"],
    embed = [":go_default_library"],
    deps = ["//expression:go_default_library"],
)
